feat: hard cut enterprise auth and access control
